# jalapeno-predictor

./: .gitignore  LICENSE  README.md  main.ipynb  main.py  mobilenetv2.ipynb  pyproject.toml  requirements.txt  transfer_learning.ipynb
data/: csv_creator.py  info.txt  labels.csv
img/: potential_moves.txt
notebooks/: main.ipynb  mobilenetv2.ipynb
src/: main.ipynb  main.py
train/: main.ipynb
